<resources>
    <string name="app_name">0028.SpeedTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_screen_tv_testing">Testing</string>
    <string name="setting_screen_units">Units</string>
    <string name="setting_screen_scale">Scale</string>
    <string name="setting_screen_network_signal_scanning">Network signal scanning</string>
    <string name="setting_screen_speedtest_title">SPEEDTEST</string>
    <string name="setting_screen_learn_more">Help us improve our coverage maps by enabling network signal scanning in the background. Coverage data may be shared
with third parties. <font color="#5EC7D3"><u>Learn More</u></font></string>
    <string name="setting_screen_adchoice">Adchoice</string>
    <string name="setting_screen_remove_ads">Remove ADS</string>
    <string name="setting_screen_restore_purchase">Restore Purchase</string>
    <string name="setting_screen_help">Help</string>
    <string name="setting_screen_speedtest_help">Speedtest Help</string>
    <string name="setting_screen_language">Language</string>
    <string name="setting_screen_give_us_feedback">Give Us Feedback</string>
    <string name="setting_screen_about_speedtest">About Speedtest</string>
    <string name="setting_screen_privacy_policy">Privacy Policy</string>
    <string name="setting_screen_terms_of_use">Terms of Use</string>
    <string name="setting_screen_version">Version</string>
    <string name="setting_screen_language_dialog_viet_nam">Viet Nam</string>
    <string name="setting_screen_language_dialog_english">English</string>
    <string name="setting_screen_language_dialog_ok">OK</string>
    <string name="setting_screen_language_dialog_cancel">CANCEL</string>
    <string name="setting_screen_language_dialog_language">Language</string>
    <string name="setting_screen_mbp_s">Mbp/s</string>
    <string name="setting_screen_mb_s">MB/s</string>
    <string name="setting_screen_kb_s">KB/s</string>
    <string name="setting_screen_rate_app">Rate App</string>
    <string name="setting_screen_english">English</string>
    <string name="tv_multi_maintab_screen">Multi</string>
    <string name="tv_single_maintab_screen">Single</string>
    <string name="tv_connections_maintab_screen">Connections</string>
    <string name="tv_telecom_maintab_screen">Telecom</string>
    <string name="tv_network_providers_maintab_screen">FPT Telecom</string>
    <string name="test_with_this_server_menuitem">Test with this server</string>
    <string name="favorite_with_this_server_menuitem">Favorite this server</string>
    <string name="start">START</string>
    <string name="test_again_dialog_maintab_result">Test Again</string>
    <string name="no_server_found_dialog_network">No server found</string>
    <string name="history_screen_type">Type</string>
    <string name="history_screen_date">Date</string>
    <string name="history_info_screen_tapi_gruop">Tapi Group</string>
    <string name="history_dialog_delete_all_results">Delete All Results?</string>
    <string name="history_dialog_delete_results">Delete Results?</string>
    <string name="Choose_in_app_inten">"Choose a sharing app"</string>
    <string name="history_screen_download_type_mbps">Mbps</string>
    <string name="history_screen_test_start">Test Start</string>
    <string name="hist_tory_screen_empty_text">You do not have any test results.</string>
    <string name="history_dialog_content">Delete results cannot be undone.</string>
    <string name="history_detail_dialog_content">Delete results cannot be undone.</string>
    <string name="history_detail_ping">Ping</string>
    <string name="history_detail_mbps">Mbps</string>
    <string name="history_detail_download">Download</string>
    <string name="history_detail_upload">Upload</string>
    <string name="history_detail_connections">Connections</string>
    <string name="history_detail_network_providers">Network Providers</string>
    <string name="history_detail_user">User</string>
    <string name="history_detail_user_location">User Location</string>
    <string name="history_detail_lat">Lat :</string>
    <string name="history_detail_lon">Lon :</string>
    <string name="history_detail_internal_ip">Internal IP : </string>
    <string name="history_detail_external_ip">External IP :</string>
    <string name="home_screen_color_tab_blue">#5EC7D3</string>
    <string name="home_screen_color_tab_white">#FFFFFF</string>

    <string name="help_us_improve">Help us Improve</string>
    <string name="did_you_like_our_app">Did you like our App?</string>
    <string name="yes">Yes</string>
    <string name="thank_you">Thank you!</string>
    <string name="recommend_us_to_other_by_rating_us_n_on_app_store">Recommend us to other by rating us\n on App Store</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="yes_rate_it_now">Yes, rate it now!</string>
    <string name="speedtest">SPEEDTEST</string>
    <string name="upgrade_to_premium_version">Upgrade to premium version</string>
    <string name="no_more_annoying_ads">No more annoying Ads</string>
    <string name="unlimited_project">Unlimited Project</string>
    <string name="tons_of_feature_update_in_future">Tons of feature update in future</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="upgrade_now">UPGRADE NOW</string>
    <string name="ms_unit_pingrate_maintab">Ms</string>
    <string name="no_internet_maintab_screen">No internet</string>
    <string name="speedtest_actionbar_text_maintabscreen">SPEEDTEST</string>
    <string name="nanning_maintab_screen">Nanning</string>
    <string name="upload_result_maintabscreen">Upload</string>
    <string name="download_maintab_screen">Download</string>
    <string name="ping_result_maintab_screen">Ping</string>
    <string name="ms_unit_pingresult_dialog">Ms</string>
    <string name="unit_kbs">Kb/s</string>
    <string name="unit_mbps">Mbp/s</string>
    <string name="unit_mbs">Mb/s</string>
    <string name="default_value_rate">0.0</string>
    <string name="maintab_value_2g">2G</string>
    <string name="maintab_value_3g">3G</string>
    <string name="maintab_value_4g">4G</string>
    <string name="maintab_value_5g">5G</string>
    <string name="maintab_value_wifi">Wifi</string>
    <string name="network_provider_dialog_no_data">No severs found</string>

</resources>