<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#363950">

                <TextView
                    android:id="@+id/language_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/font_roboto_bold"
                    android:text="@string/history_dialog_delete_results"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/font_roboto_regular"
                    android:maxLines="1"
                    android:text="@string/history_detail_dialog_content"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="@id/language_tv"
                    app:layout_constraintTop_toBottomOf="@id/language_tv" />

                <TextView
                    android:id="@+id/ok_tv"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/font_roboto_bold"
                    android:gravity="center"
                    android:text="@string/setting_screen_language_dialog_ok"
                    android:textColor="#5EC7D3"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/cancel_tv"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"

                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/font_roboto_bold"
                    android:gravity="center"
                    android:text="@string/setting_screen_language_dialog_cancel"
                    android:textColor="#5EC7D3"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ok_tv"
                    app:layout_constraintTop_toBottomOf="@id/content" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
