<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#363950">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/language_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/font_roboto_bold"
                    android:text="@string/setting_screen_language_dialog_language"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/language_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="31dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/language_tv">

                    <RadioButton
                        android:id="@+id/vietnam_rb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:buttonTint="#FFCB2E"
                        android:fontFamily="@font/font_roboto_regular"
                        android:padding="15dp"
                        android:text="@string/setting_screen_language_dialog_viet_nam"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <RadioButton
                        android:id="@+id/english_rb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?attr/selectableItemBackground"
                        android:buttonTint="#FFCB2E"
                        android:checked="true"
                        android:fontFamily="@font/font_roboto_regular"
                        android:padding="15dp"
                        android:text="@string/setting_screen_language_dialog_english"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ok_tv"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/font_roboto_bold"
                    android:gravity="center"
                    android:text="@string/setting_screen_language_dialog_ok"
                    android:textColor="#5EC7D3"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/language_rb" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cancel_tv"
                    android:layout_width="80dp"
                    android:layout_height="50dp"

                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/font_roboto_bold"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/setting_screen_language_dialog_cancel"
                    android:textColor="#5EC7D3"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ok_tv"
                    app:layout_constraintTop_toBottomOf="@id/language_rb" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
