<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTrans">

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/common_bg_dialog_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/love_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:srcCompat="@drawable/common_love_icon" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/font_roboto_medium"
            android:text="@string/thank_you"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/love_img" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font_roboto_medium"
            android:gravity="center"
            android:lines="1"
            android:text="@string/recommend_us_to_other_by_rating_us_n_on_app_store"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:id="@+id/card_rate"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

        </View>

        <View
            android:id="@+id/view_rate_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@drawable/common_bg_dialog_shape"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/card_rate"
            app:layout_constraintEnd_toEndOf="@+id/card_rate"
            app:layout_constraintStart_toStartOf="@+id/card_rate"
            app:layout_constraintTop_toTopOf="@+id/card_rate" />


        <com.tapi.a0028speedtest.textgradientanimation.TextViewGradient
            android:id="@+id/rate_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fontFamily="@font/font_roboto_medium"
            android:gravity="center"
            android:text="@string/yes_rate_it_now"
            app:layout_constraintBottom_toBottomOf="@+id/card_rate"
            app:layout_constraintEnd_toEndOf="@+id/card_rate"
            app:layout_constraintStart_toStartOf="@+id/card_rate"
            app:layout_constraintTop_toTopOf="@+id/card_rate" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_no_thanks"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/card_rate">

            <TextView
                android:id="@+id/no_thanks_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/common_bg_dialog_shape"
                android:gravity="center"
                android:text="@string/no_thanks"
                android:textColor="@android:color/white" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>