<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:background="@color/colorBlackTrans"
        android:layout_height="match_parent">


        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/common_bg_dialog_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <ImageView
            android:id="@+id/smile_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/common_smile_icon" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/help_us_improve"
            android:textSize="14dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/font_roboto_medium"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/smile_img" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/did_you_like_our_app"
            android:textSize="20dp"
            android:fontFamily="@font/font_roboto_bold"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/like_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/common_like_icon" />

        <ImageView
            android:id="@+id/unlike_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/common_unlike_icon" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:fontFamily="@font/font_roboto_medium"
            app:layout_constraintEnd_toEndOf="@+id/like_btn"
            app:layout_constraintStart_toStartOf="@+id/like_btn"
            app:layout_constraintTop_toBottomOf="@+id/like_btn" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="No"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:fontFamily="@font/font_roboto_medium"
            app:layout_constraintEnd_toEndOf="@+id/unlike_btn"
            app:layout_constraintStart_toStartOf="@+id/unlike_btn"
            app:layout_constraintTop_toBottomOf="@+id/unlike_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>